examples/pos/feature-flags-ffi.effekt
extern def backendName(): String =
  js """ ("js") """
  chez {"chez"}
  llvm {"llvm"}
  default {"unknown"}

extern def backendName2(): String =
  js """ ("js") """
  chez {"chez"}
  llvm {"llvm"}
  default {"unknown"}

def main() = {
  println(backendName() == backendName2())
}