examples/neg/extern_no_show.effekt
extern type NoShow

extern def noshow() at {}: NoShow = 
  js ""
  chez ""
  llvm ""

def main() = println(noshow().show)